--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,17 +3,11 @@
 
 name: Java CI with Gradle
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: push
+
 jobs:
   gradle:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -21,12 +15,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
         
       - name: Build SampleApplication
         run: ./gradlew --no-daemon build
